--- a/xichuangzhu/templates/add_author.html
+++ b/xichuangzhu/templates/add_author.html
@@ -46,7 +46,7 @@
 		<div class="control-group">
 			<label class="control-label">简介</label>
 			<div class="controls">
-				<textarea id="author-introduction" rows="10" name="introduction"></textarea>
+				<textarea class="input-xxlarge" id="author-introduction" rows="10" name="introduction"></textarea>
 			</div>
 		</div>
 
