--- a/xichuangzhu/templates/add_collection.html
+++ b/xichuangzhu/templates/add_collection.html
@@ -62,7 +62,7 @@ $(document).ready(function(){
 		<div class="control-group">
 			<label class="control-label">简介</label>
 			<div class="controls">
-				<textarea name="introduction" rows='10'></textarea>
+				<textarea class="input-xxlarge" name="introduction" rows='10'></textarea>
 			</div>
 		</div>
 
