--- a/xichuangzhu/templates/add_dynasty.html
+++ b/xichuangzhu/templates/add_dynasty.html
@@ -36,7 +36,7 @@
 		<div class="control-group">
 			<label class="control-label">简介</label>
 			<div class="controls">
-				<textarea rows="10" name="introduction"></textarea>
+				<textarea class="input-xxlarge" rows="10" name="introduction"></textarea>
 			</div>
 		</div>
 
