--- a/xichuangzhu/templates/add_work.html
+++ b/xichuangzhu/templates/add_work.html
@@ -102,7 +102,7 @@ $(document).ready(function(){
 		<div class="control-group">
 			<label class="control-label">内容</label>
 			<div class="controls">
-				<textarea name="content" rows='10'></textarea>
+				<textarea class="input-xxlarge" name="content" rows='15'></textarea>
 			</div>
 		</div>
 
