--- a/xichuangzhu/templates/edit_collection.html
+++ b/xichuangzhu/templates/edit_collection.html
@@ -62,7 +62,7 @@ $(document).ready(function(){
 		<div class="control-group">
 			<label class="control-label">简介</label>
 			<div class="controls">
-				<textarea name="introduction" rows='10'>{{ collection.Introduction }}</textarea>
+				<textarea name="introduction" class="input-xxlarge" rows='10'>{{ collection.Introduction }}</textarea>
 			</div>
 		</div>
 
