--- a/xichuangzhu/templates/edit_dynasty.html
+++ b/xichuangzhu/templates/edit_dynasty.html
@@ -35,7 +35,7 @@
 		<div class="control-group">
 			<label class="control-label" for="input-intro">简介</label>
 			<div class="controls">
-				<textarea rows="10" name="introduction" id="input-intro" >{{ dynasty.Introduction }}</textarea>
+				<textarea rows="10" class="input-xxlarge" name="introduction" id="input-intro" >{{ dynasty.Introduction }}</textarea>
 			</div>
 		</div>
 
