--- a/xichuangzhu/templates/edit_work.html
+++ b/xichuangzhu/templates/edit_work.html
@@ -123,7 +123,7 @@ $(document).ready(function(){
 		<div class="control-group">
 			<label class="control-label">内容</label>
 			<div class="controls">
-				<textarea name="content" id="work-content" rows='15'>{{ work.Content }}</textarea>
+				<textarea name="content" class="input-xxlarge" id="work-content" rows='15'>{{ work.Content }}</textarea>
 			</div>
 		</div>
 
