--- a/xichuangzhu/templates/edit_author.html
+++ b/xichuangzhu/templates/edit_author.html
@@ -51,9 +51,16 @@
 		</div>
 
 		<div class="control-group">
+			<label class="control-label">名言</label>
+			<div class="controls">
+				<input type="text" rows="10" class="input-xlarge" name="quote" value="{{ author.Quote }}" />
+			</div>
+		</div>
+
+		<div class="control-group">
 			<label class="control-label">简介</label>
 			<div class="controls">
-				<textarea id="author-introduction" rows="10" name="introduction">{{ author.Introduction }}</textarea>
+				<textarea rows="10" class="input-xxlarge" name="introduction">{{ author.Introduction }}</textarea>
 			</div>
 		</div>
 
