try douban oauth2.0 and smtplib

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -3,16 +3,12 @@ body{
 	font-family: 'arial', '宋体';
 	
 	#main-wap{
-		font-size: 18px;
+		font-size: 14px;
 		line-height: 26px;
 		min-height: 700px;
 
 		a:not[class='btn']{
 			color: rgb(0, 85, 128)
-		}
-
-		textarea{
-			//width: 500px;
 		}
 
 		h4{
@@ -32,6 +28,12 @@ body{
 	}
 }
 
+#douban-icon{
+	float: right;
+	margin-top: 8px;
+	cursor: pointer;
+}
+
 #footer{
 	text-align: center;
 	font-size: 12px;
@@ -43,6 +45,7 @@ body{
 	a{
 		margin-left: 5px;
 		font-size: 12px;
+		font-family: 'yahei';
 	}
 }
 
@@ -97,7 +100,7 @@ body{
 				font-weight: normal;
 
 				a{
-					color: black;
+					color: #333;
 				}
 			}					
 		}
@@ -288,7 +291,7 @@ body{
 			font-size: 12px;
 			font-weight: normal;
 			color: gray;
-			margin-left: 10px;
+			margin-left: 15px;
 		}		
 	}
 
