--- a/xichuangzhu/templates/add_author.html
+++ b/xichuangzhu/templates/add_author.html
@@ -44,6 +44,13 @@
 		</div>
 
 		<div class="control-group">
+			<label class="control-label">名言</label>
+			<div class="controls">
+				<input type="text" rows="10" class="input-xlarge" name="quote" />
+			</div>
+		</div>
+
+		<div class="control-group">
 			<label class="control-label">简介</label>
 			<div class="controls">
 				<textarea class="input-xxlarge" id="author-introduction" rows="10" name="introduction"></textarea>
