--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -1,14 +1,15 @@
-body{margin:55px 0 0 0;font-family:'arial','宋体';}body #main-wap{font-size:18px;line-height:26px;min-height:700px;}body #main-wap a:not[class='btn']{color:#005580;}
+body{margin:55px 0 0 0;font-family:'arial','宋体';}body #main-wap{font-size:14px;line-height:26px;min-height:700px;}body #main-wap a:not[class='btn']{color:#005580;}
 body #main-wap h4{font-size:20px;color:#CD9B1D;margin:20px 0 15px 0;}
 body #main-wap h2{font-size:18px;line-height:18px;font-family:'yahei';font-weight:normal;margin:15px 0;color:darkred;}
+#douban-icon{float:right;margin-top:8px;cursor:pointer;}
 #footer{text-align:center;font-size:12px;font-family:'微软雅黑';margin:20px 0 10px 0;}
-.link-more a{margin-left:5px;font-size:12px;}
+.link-more a{margin-left:5px;font-size:12px;font-family:'yahei';}
 .navbar-search .search-query{line-height:1.2;}
 .form-horizontal .input-append{display:block;}
 #page-index .work-item{margin-bottom:15px;}#page-index .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;font-family:'宋体';}
 #page-index .work-item .work-author{font-size:12px;font-weight:normal;}#page-index .work-item .work-author a{color:#333;}
 #page-index .work-item .work-content{font-size:14px;line-height:22px;}
-#page-index .author-item{margin-bottom:12px;}#page-index .author-item .author{font-size:16px;line-height:20px;font-weight:bold;}#page-index .author-item .author .author-dynasty{font-size:12px;font-weight:normal;}#page-index .author-item .author .author-dynasty a{color:black;}
+#page-index .author-item{margin-bottom:12px;}#page-index .author-item .author{font-size:16px;line-height:20px;font-weight:bold;}#page-index .author-item .author .author-dynasty{font-size:12px;font-weight:normal;}#page-index .author-item .author .author-dynasty a{color:#333;}
 #page-index .author-item .author-introduction{font-size:12px;}
 #page-index #dynasties-wap{margin:0;list-style:none;}#page-index #dynasties-wap .dynasty-item{float:left;font-size:16px;margin-bottom:5px;}#page-index #dynasties-wap .dynasty-item a{font-weight:bold;}
 #page-index #dynasties-wap .dynasty-item span{margin-right:5px;}
@@ -27,7 +28,7 @@ body #main-wap h2{font-size:18px;line-height:18px;font-family:'yahei';font-weigh
 #page-single-collection .work-item{margin-bottom:15px;}#page-single-collection .work-item .work-title{font-weight:bold;margin-bottom:5px;}
 #page-author .author-wap{border-top:1px dashed lightgray;padding-top:15px;}#page-author .author-wap .author-dynasty{font-size:16px;line-height:16px;color:darkblue;font-family:'微软雅黑';width:100px;float:left;display:inline-block;}
 #page-author .author-wap .author-group{list-style:none;margin:0 0 0 100px;}#page-author .author-wap .author-group li{float:left;margin-bottom:15px;}#page-author .author-wap .author-group li.author{font-size:16px;line-height:20px;width:100px;}
-#page-single-author .author{font-size:25px;line-height:45px;font-weight:bold;}#page-single-author .author .author-quote{font-size:12px;font-weight:normal;color:gray;margin-left:10px;}
+#page-single-author .author{font-size:25px;line-height:45px;font-weight:bold;}#page-single-author .author .author-quote{font-size:12px;font-weight:normal;color:gray;margin-left:15px;}
 #page-single-author .author-period{font-size:16px;margin-bottom:10px;}
 #page-single-author .author-introduction{font-size:14px;line-height:25px;}
 #page-single-author .collection-item{margin-bottom:10px;}#page-single-author .collection-item .collection{font-weight:bold;font-size:16px;}
