--- a/xichuangzhu/templates/dynasty.html
+++ b/xichuangzhu/templates/dynasty.html
@@ -12,7 +12,7 @@
 		{% for dynasty in dynasties %}
 		<div class='dynasty-item'>
 			<div class='dynasty'>
-				<a href="{{ url_for('single_dynasty', dynastyID=dynasty.DynastyID) }}">{{ dynasty.Dynasty }}</a><sup class="dynasty-period">〔{{ dynasty.StartYear|replace('-', '前') }}年~{{ dynasty.EndYear|replace('-', '前') }}年〕</sup>
+				<a href="{{ url_for('single_dynasty', dynastyID=dynasty.DynastyID) }}">{{ dynasty.Dynasty }}</a><!-- <sup class="dynasty-period">〔{{ dynasty.StartYear|replace('-', '前') }}年~{{ dynasty.EndYear|replace('-', '前') }}年〕</sup> -->
 			</div>
 			<div class='dynasty-introduction'>{{ dynasty.Introduction|truncate(100, True) }}</div>
 		</div>
