--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -20,44 +20,52 @@
 					<ul class="nav">
 						<li><a href="{{ url_for('index') }}">首页</a></li>
 						<li><a href="#">收藏</a></li>
-						<li><a href="#">论坛</a></li>
-						<li><a href="#">店铺</a></li>
+						<!-- <li><a href="#">论坛</a></li> -->
+						<!-- <li><a href="#">店铺</a></li> -->
 					</ul>
 
 					<!-- search -->
 					<form class="navbar-search">
 						<input type="text" class="search-query" placeholder="作品 / 文学家 / 朝代">
 					</form>
+					
+					{% if session.user_id %}
 
 					<!-- user info -->
-					<!-- <ul class="nav pull-right">
+					<ul class="nav pull-right">
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								hustlzp <b class="caret"></b>
+								{{ session.user_name }} <b class="caret"></b>
 							</a>
 							<ul class="dropdown-menu">
-								<li><a href="#">退出</a></li>
+								<li><a href="{{ url_for('logout') }}">退出</a></li>
 							</ul>
 						</li>
-					</ul> -->
+					</ul>
+
+						{% if session.user_id == 45197381 %}
+						<!-- add -->
+						<ul class="nav pull-right">
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+									添加 <span class="caret"></span>
+								</a>
+
+								<ul class="dropdown-menu">
+									<li><a href="{{ url_for('add_work') }}">作品</a></li>
+									<li><a href="{{ url_for('add_collection') }}">作品集</a></li>
+									<li><a href="{{ url_for('add_author') }}">文学家</a></li>
+									<li><a href="{{ url_for('add_dynasty') }}">朝代</a></li>
+								</ul>
+							</li>
+						</ul>
+						{% endif %}
+
+					{% else %}
 
 					<a href="https://www.douban.com/service/auth2/auth?client_id=0cf909cba46ce67526eb1d62ed46b35f&redirect_uri=http://localhost:5000/login/douban&response_type=code"><img id="douban-icon" title="使用豆瓣帐号登陆" src="http://img3.douban.com/pics/douban-icons/favicon_24x24.png" /></a>
 
-					<!-- add -->
-					<!-- <ul class="nav pull-right">
-						<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-								添加 <span class="caret"></span>
-							</a>
-
-							<ul class="dropdown-menu">
-								<li><a href="{{ url_for('add_work') }}">作品</a></li>
-								<li><a href="{{ url_for('add_collection') }}">作品集</a></li>
-								<li><a href="{{ url_for('add_author') }}">文学家</a></li>
-								<li><a href="{{ url_for('add_dynasty') }}">朝代</a></li>
-							</ul>
-						</li>
-					</ul> -->
+					{% endif %}
 
 				</div>
 			</div>
