--- a/xichuangzhu/templates/single_collection.html
+++ b/xichuangzhu/templates/single_collection.html
@@ -7,9 +7,11 @@
 
 <div class="row">
 	<div class="span8">
+		{% if session.user_id == 45197381 %}
 		<div class="btn-group pull-right">
 			<a class="btn btn-primary" href="{{ url_for('edit_collection', collectionID=collection.CollectionID) }}">编辑</a>
 		</div>
+		{% endif %}
 
 		<h1 class="collection">{{ collection.Collection }}</h1>
 
