--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -26,6 +26,7 @@ body{
 			font-weight: normal;
 			margin: 15px 0;
 			color: darkred;
+			clear: both;
 		}
 	}
 }
@@ -185,10 +186,9 @@ body{
 
 	.work-content{
 		font-family: '仿宋_GB2312';
-		//font-family: '宋体';
-		font-weight: bold;
-		font-size: 18px;
+		font-weight: bold;	
 		margin-bottom: 30px;
+		//font-size: 18px;
 		font-size: 14pt;
 	}
 	.work-type-shi{
