--- a/xichuangzhu/templates/single_dynasty.html
+++ b/xichuangzhu/templates/single_dynasty.html
@@ -8,7 +8,7 @@
 <div class="row">
 	<div class="span8">
 		{% if session.user_id == 45197381 %}
-		<a class="btn btn-primary pull-right" href="{{ url_for('edit_dynasty', dynastyID=dynasty.DynastyID) }}">编辑</a>
+		<a class="btn btn-small pull-right" href="{{ url_for('edit_dynasty', dynastyID=dynasty.DynastyID) }}">编辑</a>
 		{% endif %}
 
 		<h1 class='dynasty'>{{ dynasty.Dynasty }}</h1>
