--- a/xichuangzhu/templates/single_work.html
+++ b/xichuangzhu/templates/single_work.html
@@ -7,16 +7,20 @@
 
 <div class="row">
 	<div class="span8">
-		{% if session.user_id == 45197381 %}
-		<div class="pull-right">
-			<a class="btn btn-primary" href="{{ url_for('edit_work', workID=work.WorkID) }}">编辑</a>
-		</div>
-		{% endif %}
-
 		<div class="work-title">{{ work.Title }}</div>
 		<div class="work-author">
 			〔<a href="{{ url_for('single_dynasty', dynastyID = work.DynastyID) }}">{{ work.Dynasty }}</a>〕<a href="{{ url_for('single_author', authorID=work.AuthorID) }}">{{ work.Author }}</a></div>
 		<div class="work-content work-type-{{ work.Type }}">{{ work.Content|safe }}</div>
+
+		{% if session.user_id %}
+		<div class="btn-group pull-right">
+			<a class="btn btn-small" href="#">收藏 <span class="icon-heart"></span></a>
+			<a class="btn btn-small" href="#">点评 <span class="icon-file"></span></a>
+			{% if session.user_id == 45197381 %}
+			<a class="btn btn-small" href="{{ url_for('edit_work', workID=work.WorkID) }}">编辑 <span class="icon-edit"></span></a>
+			{% endif %}
+		</div>
+		{% endif %}
 
 		{% if work.CollectionID != 0 %}
 		<h2>作品集</h2>
