add new type [geci] and new period [xiandai]

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -22,7 +22,7 @@ body{
 		h2{
 			font-size: 18px;
 			line-height: 18px;
-			font-family: 'yahei';
+			font-family: '微软雅黑';
 			font-weight: normal;
 			margin: 15px 0;
 			color: darkred;
@@ -48,7 +48,7 @@ body{
 	a{
 		margin-left: 5px;
 		font-size: 12px;
-		font-family: 'yahei';
+		font-family: '微软雅黑';
 	}
 }
 
@@ -72,7 +72,6 @@ body{
 			font-size: 16px;
 			line-height: 30px;
 			font-weight: bold;
-			font-family: '宋体';
 		}
 
 		.work-author{
@@ -144,7 +143,6 @@ body{
 			font-size: 16px;
 			line-height: 30px;
 			font-weight: bold;
-			font-family: '宋体';
 		}
 
 		.work-author{
@@ -172,7 +170,6 @@ body{
 		margin-top: 30px;
 		margin-bottom: 12px;
 		font-weight: bold;
-		font-family: '宋体';
 		text-align: center;
 		clear: both;
 	}
@@ -197,6 +194,9 @@ body{
 	.work-type-ci{
 		text-indent: 2em;
 		line-height: 30px;
+	}
+	.work-type-geci{
+		text-indent: 10em;
 	}
 	.work-type-wen{
 		p{
@@ -343,13 +343,11 @@ body{
 			font-size: 16px;
 			line-height: 25px;
 			font-weight: bold;
-			font-family: '宋体';
 
 			.dynasty-period{
 				font-size: 12px;
 				margin-left: 5px;
 				font-weight: normal;
-				font-family: 'arial','宋体';
 				font-weight: normal;
 			}
 		}
