--- a/xichuangzhu/templates/add_work.html
+++ b/xichuangzhu/templates/add_work.html
@@ -74,6 +74,7 @@ $(document).ready(function(){
 					<option value='shi'>诗</option>
 					<option value='ci'>词</option>
 					<option value='wen'>文</option>
+					<option value='geci'>歌词</option>
 				</select>
 			</div>
 		</div>
