--- a/xichuangzhu/templates/layout.html
+++ b/xichuangzhu/templates/layout.html
@@ -26,7 +26,7 @@
 
 					<!-- search -->
 					<form class="navbar-search">
-						<input type="text" class="search-query" placeholder="作品 / 文学家 / 朝代">
+						<input type="text" class="search-query" placeholder="作品 / 文学家">
 					</form>
 					
 					{% if session.user_id %}
