--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -1,26 +1,27 @@
 body{margin:55px 0 0 0;font-family:'arial','宋体';}body #main-wap{font-size:14px;line-height:26px;min-height:700px;}body #main-wap a:not[class='btn']{color:#005580;}
 body #main-wap h1{font-size:25px;line-height:25px;font-weight:bold;margin:15px 0 12px 0;}
-body #main-wap h2{font-size:18px;line-height:18px;font-family:'yahei';font-weight:normal;margin:15px 0;color:darkred;clear:both;}
+body #main-wap h2{font-size:18px;line-height:18px;font-family:'微软雅黑';font-weight:normal;margin:15px 0;color:darkred;clear:both;}
 #douban-icon{float:right;margin-top:8px;cursor:pointer;}
 #footer{text-align:center;font-size:12px;font-family:'微软雅黑';margin:20px 0 10px 0;}
-.link-more a{margin-left:5px;font-size:12px;font-family:'yahei';}
+.link-more a{margin-left:5px;font-size:12px;font-family:'微软雅黑';}
 .navbar-search .search-query{line-height:1.2;}
 .form-horizontal .input-append{display:block;}
-#page-index .work-item{margin-bottom:15px;}#page-index .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;font-family:'宋体';}
+#page-index .work-item{margin-bottom:15px;}#page-index .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;}
 #page-index .work-item .work-author{font-size:12px;font-weight:normal;}#page-index .work-item .work-author a{color:#333;}
 #page-index .work-item .work-content{font-size:14px;line-height:22px;}
 #page-index .author-item{margin-bottom:12px;}#page-index .author-item .author{font-size:16px;line-height:20px;font-weight:bold;}#page-index .author-item .author .author-dynasty{font-size:12px;font-weight:normal;}#page-index .author-item .author .author-dynasty a{color:#333;}
 #page-index .author-item .author-introduction{font-size:12px;}
 #page-index #dynasties-wap{margin:0;list-style:none;}#page-index #dynasties-wap .dynasty-item{float:left;font-size:16px;margin-bottom:5px;}#page-index #dynasties-wap .dynasty-item a{font-weight:bold;}
 #page-index #dynasties-wap .dynasty-item span{margin-right:5px;}
-#page-works .work-item{margin-bottom:15px;}#page-works .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;font-family:'宋体';}
+#page-works .work-item{margin-bottom:15px;}#page-works .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;}
 #page-works .work-item .work-author{font-size:12px;font-weight:normal;}#page-works .work-item .work-author a{color:#333;}
 #page-works .work-item .work-content{font-size:14px;line-height:22px;}
-#page-single-work .work-title{font-size:25px;line-height:35px;margin-top:30px;margin-bottom:12px;font-weight:bold;font-family:'宋体';text-align:center;clear:both;}
+#page-single-work .work-title{font-size:25px;line-height:35px;margin-top:30px;margin-bottom:12px;font-weight:bold;text-align:center;clear:both;}
 #page-single-work .work-author{text-align:center;margin-bottom:20px;padding-right:6px;font-size:16px;}
 #page-single-work .work-content{font-family:'仿宋_GB2312';font-weight:bold;margin-bottom:30px;font-size:14pt;}
 #page-single-work .work-type-shi{text-align:center;}
 #page-single-work .work-type-ci{text-indent:2em;line-height:30px;}
+#page-single-work .work-type-geci{text-indent:10em;}
 #page-single-work .work-type-wen p{text-indent:2em;line-height:30px;margin-bottom:18px;}
 #page-single-work .work-collection{font-weight:bold;font-size:16px;margin-bottom:5px;}
 #page-single-work .work-collection-introduction{font-size:14px;}
@@ -34,7 +35,7 @@ body #main-wap h2{font-size:18px;line-height:18px;font-family:'yahei';font-weigh
 #page-single-author .collection-item .collection-introduction{font-size:14px;}
 #page-single-author .work-item{margin-bottom:10px;}#page-single-author .work-item .work-title{font-weight:bold;font-size:16px;}
 #page-single-author .work-item .work-content{font-size:14px;}
-#page-dynasty .dynasty-item{margin-bottom:20px;}#page-dynasty .dynasty-item .dynasty{font-size:16px;line-height:25px;font-weight:bold;font-family:'宋体';}#page-dynasty .dynasty-item .dynasty .dynasty-period{font-size:12px;margin-left:5px;font-weight:normal;font-family:'arial','宋体';font-weight:normal;}
+#page-dynasty .dynasty-item{margin-bottom:20px;}#page-dynasty .dynasty-item .dynasty{font-size:16px;line-height:25px;font-weight:bold;}#page-dynasty .dynasty-item .dynasty .dynasty-period{font-size:12px;margin-left:5px;font-weight:normal;font-weight:normal;}
 #page-dynasty .dynasty-item .dynasty-introduction{font-size:14px;line-height:22px;}
 #page-single-dynasty .dynasty-period{font-size:16px;}
 #page-single-dynasty .dynasty-introduction{font-size:14px;}
