--- a/xichuangzhu/templates/edit_work.html
+++ b/xichuangzhu/templates/edit_work.html
@@ -97,6 +97,7 @@ $(document).ready(function(){
 					<option value='shi' {% if work.Type == 'shi' %}selected="selected"{% endif %}>诗</option>
 					<option value='ci' {% if work.Type == 'ci' %}selected="selected"{% endif %}>词</option>
 					<option value='wen' {% if work.Type == 'wen' %}selected="selected"{% endif %}>文</option>
+					<option value='geci' {% if work.Type == 'geci' %}selected="selected"{% endif %}>歌词</option>
 				</select>
 			</div>
 		</div>
