finish review function

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -8,9 +8,9 @@ body{
 		line-height: 26px;
 		min-height: 700px;
 
-		a:not[class='btn']{
-			color: rgb(0, 85, 128)
-		}
+		// a:not[class='btn']{
+		// 	color: #37a;
+		// }
 
 		h1{
 			font-size: 25px;
@@ -24,7 +24,7 @@ body{
 			line-height: 18px;
 			font-family: '微软雅黑';
 			font-weight: normal;
-			margin: 15px 0;
+			margin: 20px 0 15px 0;
 			color: darkred;
 			clear: both;
 		}
@@ -86,6 +86,34 @@ body{
 		.work-content{
 			font-size: 14px;
 			line-height: 22px;
+		}
+	}
+
+	.review-item{
+		margin-bottom: 15px;
+
+		.user-avatar{
+			float: left;
+			margin-top: 5px;
+		}
+
+		.review-wap{
+			margin-left: 60px;
+
+			.review-title{
+				font-size: 16px;
+				font-weight: bold;			
+			}
+
+			.review-content{
+				font-size: 12px;
+				line-height: 22px;			
+			}
+
+			.review-extra-info{
+				font-size: 12px;
+				line-height: 22px;
+			}
 		}
 	}
 
@@ -216,6 +244,33 @@ body{
 		font-size: 14px;
 	}
 
+	.review-item{
+		margin-bottom: 15px;
+		
+		.user-avatar{
+			float: left;
+			margin-top: 5px;
+		}
+
+		.review-wap{
+			margin-left: 60px;
+
+			.review-title{
+				font-size: 16px;
+				font-weight: bold;
+			}
+
+			.review-extra-info{
+				font-size: 12px;
+				line-height: 22px;
+			}
+
+			.review-content{
+				font-size: 12px;
+				line-height: 22px;
+			}		
+		}
+	}
 }
 
 // page add work
@@ -388,4 +443,55 @@ body{
 // page add dynasty
 //-----------------------------------------------------
 #page-add-dynasty{
+
+}
+
+// page single review
+//-----------------------------------------------------
+#page-single-review{
+
+	.user-avatar{
+		float: left;
+		margin-top: 5px;
+	}
+
+	.review-wap{
+		margin-left: 65px;
+
+		.review-extra-info{
+			margin-bottom: 10px;
+		}
+	}
+}
+
+// page reviews
+//-----------------------------------------------------
+#page-reviews{
+	.review-item{
+		margin-bottom: 15px;
+
+		.user-avatar{
+			float: left;
+			margin-top: 5px;
+		}
+
+		.review-wap{
+			margin-left: 60px;
+
+			.review-title{
+				font-size: 16px;
+				font-weight: bold;			
+			}
+
+			.review-content{
+				font-size: 12px;
+				line-height: 22px;			
+			}
+
+			.review-extra-info{
+				font-size: 12px;
+				line-height: 22px;
+			}
+		}
+	}
 }
