--- a/xichuangzhu/static/style/page.css
+++ b/xichuangzhu/static/style/page.css
@@ -1,6 +1,5 @@
-body{margin:55px 0 0 0;font-family:'arial','宋体';}body #main-wap{font-size:14px;line-height:26px;min-height:700px;}body #main-wap a:not[class='btn']{color:#005580;}
-body #main-wap h1{font-size:25px;line-height:25px;font-weight:bold;margin:15px 0 12px 0;}
-body #main-wap h2{font-size:18px;line-height:18px;font-family:'微软雅黑';font-weight:normal;margin:15px 0;color:darkred;clear:both;}
+body{margin:55px 0 0 0;font-family:'arial','宋体';}body #main-wap{font-size:14px;line-height:26px;min-height:700px;}body #main-wap h1{font-size:25px;line-height:25px;font-weight:bold;margin:15px 0 12px 0;}
+body #main-wap h2{font-size:18px;line-height:18px;font-family:'微软雅黑';font-weight:normal;margin:20px 0 15px 0;color:darkred;clear:both;}
 #douban-icon{float:right;margin-top:8px;cursor:pointer;}
 #footer{text-align:center;font-size:12px;font-family:'微软雅黑';margin:20px 0 10px 0;}
 .link-more a{margin-left:5px;font-size:12px;font-family:'微软雅黑';}
@@ -9,6 +8,10 @@ body #main-wap h2{font-size:18px;line-height:18px;font-family:'微软雅黑';fon
 #page-index .work-item{margin-bottom:15px;}#page-index .work-item .work-title{font-size:16px;line-height:30px;font-weight:bold;}
 #page-index .work-item .work-author{font-size:12px;font-weight:normal;}#page-index .work-item .work-author a{color:#333;}
 #page-index .work-item .work-content{font-size:14px;line-height:22px;}
+#page-index .review-item{margin-bottom:15px;}#page-index .review-item .user-avatar{float:left;margin-top:5px;}
+#page-index .review-item .review-wap{margin-left:60px;}#page-index .review-item .review-wap .review-title{font-size:16px;font-weight:bold;}
+#page-index .review-item .review-wap .review-content{font-size:12px;line-height:22px;}
+#page-index .review-item .review-wap .review-extra-info{font-size:12px;line-height:22px;}
 #page-index .author-item{margin-bottom:12px;}#page-index .author-item .author{font-size:16px;line-height:20px;font-weight:bold;}#page-index .author-item .author .author-dynasty{font-size:12px;font-weight:normal;}#page-index .author-item .author .author-dynasty a{color:#333;}
 #page-index .author-item .author-introduction{font-size:12px;}
 #page-index #dynasties-wap{margin:0;list-style:none;}#page-index #dynasties-wap .dynasty-item{float:left;font-size:16px;margin-bottom:5px;}#page-index #dynasties-wap .dynasty-item a{font-weight:bold;}
@@ -25,6 +28,10 @@ body #main-wap h2{font-size:18px;line-height:18px;font-family:'微软雅黑';fon
 #page-single-work .work-type-wen p{text-indent:2em;line-height:30px;margin-bottom:18px;}
 #page-single-work .work-collection{font-weight:bold;font-size:16px;margin-bottom:5px;}
 #page-single-work .work-collection-introduction{font-size:14px;}
+#page-single-work .review-item{margin-bottom:15px;}#page-single-work .review-item .user-avatar{float:left;margin-top:5px;}
+#page-single-work .review-item .review-wap{margin-left:60px;}#page-single-work .review-item .review-wap .review-title{font-size:16px;font-weight:bold;}
+#page-single-work .review-item .review-wap .review-extra-info{font-size:12px;line-height:22px;}
+#page-single-work .review-item .review-wap .review-content{font-size:12px;line-height:22px;}
 #page-single-collection .work-item{margin-bottom:10px;}#page-single-collection .work-item .work-title{font-weight:bold;margin-bottom:5px;}
 #page-author .author-wap{border-top:1px dashed lightgray;padding-top:15px;}#page-author .author-wap .author-dynasty{font-size:16px;line-height:16px;color:darkblue;font-family:'微软雅黑';width:100px;float:left;display:inline-block;}
 #page-author .author-wap .author-group{list-style:none;margin:0 0 0 100px;}#page-author .author-wap .author-group li{float:left;margin-bottom:15px;}#page-author .author-wap .author-group li.author{font-size:16px;line-height:20px;width:100px;}
@@ -41,3 +48,9 @@ body #main-wap h2{font-size:18px;line-height:18px;font-family:'微软雅黑';fon
 #page-single-dynasty .dynasty-introduction{font-size:14px;}
 #page-single-dynasty .author-item{margin-bottom:10px;}#page-single-dynasty .author-item .author{font-size:16px;font-weight:bold;}
 #page-single-dynasty .author-item .author-introduction{font-size:14px;}
+#page-single-review .user-avatar{float:left;margin-top:5px;}
+#page-single-review .review-wap{margin-left:65px;}#page-single-review .review-wap .review-extra-info{margin-bottom:10px;}
+#page-reviews .review-item{margin-bottom:15px;}#page-reviews .review-item .user-avatar{float:left;margin-top:5px;}
+#page-reviews .review-item .review-wap{margin-left:60px;}#page-reviews .review-item .review-wap .review-title{font-size:16px;font-weight:bold;}
+#page-reviews .review-item .review-wap .review-content{font-size:12px;line-height:22px;}
+#page-reviews .review-item .review-wap .review-extra-info{font-size:12px;line-height:22px;}
