--- a/xichuangzhu/templates/single_author.html
+++ b/xichuangzhu/templates/single_author.html
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="span8">
 		{% if session.user_id == 45197381 %}
-		<a class="btn btn-small pull-right" href="{{ url_for('edit_author', authorID=author.AuthorID) }}">编辑</a>
+		<a class="btn btn-small pull-right" href="{{ url_for('edit_author', authorID=author.AuthorID) }}">编辑  <span class="icon-edit"></span></a>
 		{% endif %}
 	
 		<div class="author">
@@ -46,7 +46,7 @@
 
 		{% for work in works %}
 		<div class="work-item">
-			<div class='work-title'><a href="{{url_for('single_work', workID=work.WorkID)}}">{{ work.Title }}</a></div>
+			<div class='work-title'><a href="{{url_for('single_work', work_id=work.WorkID)}}">{{ work.Title }}</a></div>
 			<div class='work-content'>{{ work.Content|truncate(30, True) }}</div>
 		</div>
 		{% endfor %}
