--- a/xichuangzhu/templates/single_collection.html
+++ b/xichuangzhu/templates/single_collection.html
@@ -9,7 +9,7 @@
 	<div class="span8">
 		{% if session.user_id == 45197381 %}
 		<div class="btn-group pull-right">
-			<a class="btn btn-small" href="{{ url_for('edit_collection', collectionID=collection.CollectionID) }}">编辑</a>
+			<a class="btn btn-small" href="{{ url_for('edit_collection', collectionID=collection.CollectionID) }}">编辑  <span class="icon-edit"></span></a>
 		</div>
 		{% endif %}
 
