finish poem note function

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -28,6 +28,14 @@ body{
 			color: darkred;
 			clear: both;
 		}
+
+		.tooltip{
+			font-family: 'arial', '宋体';
+			text-indent: 0;
+			font-weight: normal;
+			font-size: 12px;
+			line-height: 22px;
+		}
 	}
 }
 
@@ -215,6 +223,15 @@ body{
 		margin-bottom: 30px;
 		//font-size: 18px;
 		font-size: 14pt;
+
+		sup{
+			font-family: 'yahei';
+			font-size: 12px;
+			font-weight: normal;
+			padding: 5px 0px;
+			cursor: pointer;
+			color: #666;
+		}
 	}
 	.work-type-shi{
 		text-align: center;
