--- a/xichuangzhu/templates/edit_work.html
+++ b/xichuangzhu/templates/edit_work.html
@@ -122,6 +122,13 @@ $(document).ready(function(){
 		</div>
 
 		<div class="control-group">
+			<label class="control-label">题解</label>
+			<div class="controls">
+				<textarea class="input-xxlarge" name="introduction" rows='5'>{{ work.Introduction }}</textarea>
+			</div>
+		</div>
+
+		<div class="control-group">
 			<label class="control-label">内容</label>
 			<div class="controls">
 				<textarea name="content" class="input-xxlarge" id="work-content" rows='15'>{{ work.Content }}</textarea>
