--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -92,7 +92,6 @@ body{
 		}
 
 		.work-content{
-			font-size: 14px;
 			line-height: 22px;
 		}
 	}
@@ -509,6 +508,33 @@ body{
 				font-size: 12px;
 				line-height: 22px;
 			}
+		}
+	}
+}
+
+// page my love
+//-----------------------------------------------------
+#page-my-love{
+	.work-item{
+		margin-bottom: 15px;
+
+		.work-title{
+			font-size: 16px;
+			line-height: 30px;
+			font-weight: bold;
+		}
+
+		.work-author{
+			font-size: 12px;
+			font-weight: normal;
+
+			a{
+				color: #333;
+			}
+		}
+
+		.work-content{
+			line-height: 22px;
 		}
 	}
 }
