finish love function

--- a/xichuangzhu/templates/single_work.html
+++ b/xichuangzhu/templates/single_work.html
@@ -26,8 +26,14 @@ $(document).ready(function(){
 
 		{% if session.user_id %}
 		<div class="btn-group pull-right">
-			<a class="btn btn-small" href="#">收藏 <span class="icon-heart"></span></a>
+			{% if is_loved %}
+			<a class="btn btn-small" title="点击取消收藏" href="{{ url_for('unlove_work', work_id=work.WorkID) }}">已收藏 <span class="icon-heart"></span></a>
+			{% else %}
+			<a class="btn btn-small" title="点击收藏" href="{{ url_for('love_work', work_id=work.WorkID) }}">收藏 <span class="icon-heart"></span></a>
+			{% endif %}
+			
 			<a class="btn btn-small" href="{{ url_for('add_review', work_id=work.WorkID) }}">点评 <span class="icon-file"></span></a>
+
 			{% if session.user_id == 45197381 %}
 			<a class="btn btn-small" href="{{ url_for('edit_work', work_id=work.WorkID) }}">编辑 <span class="icon-edit"></span></a>
 			{% endif %}
